--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
 fastapi>=0.111.0
 uvicorn[standard]>=0.30.0
 pydantic>=2.6.0
-
-# إضافات شائعة مع FastAPI
-python-dotenv>=1.0.1
-httpx>=0.27.0
-
-# مكتبات مشروعك
-pandas>=2.2.2
-openai>=1.40.0
+python-multipart>=0.0.9
